Certified Kubernetes Administrator: Network Policies and Traffic Management/allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-orders
  namespace: payment     # target namespace
spec:
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: orders   # source namespace
      ports:
        - port: 80
          protocol: TCP
