Certified Kubernetes Administrator: Network Policies and Traffic Management/deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-1
  namespace: analytics
spec:
  podSelector: {}
  policyTypes:
  - Egress
