Certified Kubernetes Administrator: Network Policies and Traffic Management/deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress-1
  namespace: payment
spec:
  podSelector: {}
  policyTypes:
  - Ingress
